@@ -118,8 +118,8 @@
 #bitrate_down=10000000
 
 # Secure Mode, UPnP clients can only add mappings to their own IP
-#secure_mode=yes
-secure_mode=no
+# Enabled by default
+#secure_mode=no
 
 # Default presentation URL is HTTP address on port 80
 # If set to an empty string, no presentationURL element will appear
